--- a/thesis.tex
+++ b/thesis.tex
@@ -627,7 +627,16 @@ to compare to.
 \section{Overview}
 
 While \sword provides an upper bound on the performance of a shared remote memory system, it is not
-a general purpose solution. 
+a general purpose solution. While \sword is able to provide faster locking and faster optimistic
+concurrency it does not handel all data structure, and more importantly, requires the addition of a
+programable switch to the network. The need for programmable hardware is a significant barrier to
+entry for many data center operators, and while we believe that for the most performance stringent
+applications the cost is worth it, we also believe that alternative solutions may be better for
+average operators given their current deployments. Part of our exploration during \sword was to
+investigate data structures which would be a good fit for middlebox interposition, during this
+research we also explored data structures and techniques which were amenable to disaggregation in
+general.
+
 
 \begin{table}[h]
 	%\begin{table}[h]
@@ -661,9 +670,31 @@ a general purpose solution.
 		system meets the qualification in spirit but not explicitly, and \nullcirc
 		when the technique is absent. Columns OC and CC stand for Optimistic Concurrency and Compute Coalescing respectively.}
 		
-		\label{tab:1}
+		\label{tab:re-table}
 	\end{table} 
 
+Table~\ref{tab:re-table} is the result of a literature review on the state of the art for shared
+data structures. Our reading lead us to the insight that multi-core NUMA systems and RDMA key-value
+stores shared the most with new breeds of disaggregated data structures. NUMA systems had a focus on
+high latency memory and techniques on how to mitigate their cost, and RDMA key-value stores
+explored both techniques for high performance RDMA and how to reduce the need for serialization down
+to a few fast operations~\cite{cuckoo-improvements}.
+
+A number of threads stood out to us during our review. Perhaps the most important is that data
+locality can dramatically improve performance~\cite{farm}. One of the biggest performance killers
+are the additional round trips required to resolve indirect pointers. A common design pattern in
+key-value stores is to have a index with a pointer to the data, and potentially long chains where
+collisions occur~\cite{race, clover}. Each time a pointer resolution is required the client must
+incur an additional round trip. In NUMA literature (and even for spinning disks) locality was
+identified as an important factor for performance~\cite{bbn,hopscotch}. Techniques like hop-scotch
+hashing ensure that data is close to it's hash location in physical memory. This is advantageous for
+RDMA systems as a single big read can guess at the location of the data and be ensured to grab it
+only incurring an additional bandwidth penalty.
+
+The second trend we identified is that pushing computation to the client can save a significant
+amount of time in place of locality. Page tables are difficult to port to remote memory as each
+level of indirection requires a round trip. Clio introduced the idea of a flat page table. Their
+insight is that when creating a virtual address space the virtual address is not critical.
 
 
 \input{rcuckoo/intro}
